[package]
name = "rift-rust"
version = "0.1.0"
edition = "2021"
default-run = "rift-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
sha2 = "0.10.6"
# thrift = "0.17.0"
thrift = { path = "thrift/lib/rs" }
