[package]
name = "rift-rust"
version = "0.1.0"
edition = "2021"
default-run = "rift-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.16"
sha2 = "0.10.6"
thiserror = "1.0.38"
# thrift = "0.17.0"
thrift = { path = "thrift/lib/rs" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
